Add Code of Practice link

--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -16,7 +16,9 @@
             "itemsList": [
                 {
                     "text": _('recognise that you are sharing personal information with us and treat it as confidential, as directed
-                        by the <a href="https://code.statisticsauthority.gov.uk/">Code of Practice for Statistics</a>')
+                        by the%(open_code_of_practice_link)s Code of Practice for Statistics%(close_link)s',
+                            open_code_of_practice_link = '<a href="%s">' % code_of_practice_link,
+                            close_link='</a>')
                 },
                 {
                     "text": _('only use your information for statistical purposes, or to help us run our surveys, and not publish anything
