Remove translations for proper names

--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -56,10 +56,10 @@
         onsList({
             "itemsList": [
                 {
-                    "text": _('Google Cloud Platform service')
+                    "text": 'Google Cloud Platform service'
                 },
                 {
-                    "text": _('GOV.UK Notify')
+                    "text": 'GOV.UK Notify'
                 }
             ]
         })
