Remove trailing slashes from templates

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -38,7 +38,7 @@
                 'itemsList': [
                     {
                         'text': 'PLACEHOLDER WELSH Cwcis',
-                        'url': domain_url_en + '/cy/cookies/'
+                        'url': domain_url_en + '/cy/cookies'
                     },
                     {
                         'text': 'PLACEHOLDER WELSH Datganiad hygyrchedd',
@@ -46,7 +46,7 @@
                     },
                     {
                         'text': 'PLACEHOLDER WELSH Preifatrwydd a diogelu data',
-                        'url': domain_url_en + '/cy/privacy-and-data-protection/'
+                        'url': domain_url_en + '/cy/privacy-and-data-protection'
                     }
                 ]
             }
@@ -126,9 +126,9 @@
 {#    {{#}
 {#        onsCookiesBanner({#}
 {#            'statementTitle': 'PLACEHOLDER WELSH Dywedwch wrthym a ydych yn derbyn cwcis',#}
-{#            'statementText': "PLACEHOLDER WELSH Rydym ni’n defnyddio <a href='" + domain_url_en + "/cy/cookies/" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",#}
-{#            'confirmationText': 'PLACEHOLDER WELSH Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_en + '/cy/cookies/' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',#}
-{#            'secondaryButtonUrl': domain_url_en + '/cy/cookies/',#}
+{#            'statementText': "PLACEHOLDER WELSH Rydym ni’n defnyddio <a href='" + domain_url_en + "/cy/cookies" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",#}
+{#            'confirmationText': 'PLACEHOLDER WELSH Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_en + '/cy/cookies' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',#}
+{#            'secondaryButtonUrl': domain_url_en + '/cy/cookies',#}
 {#            'primaryButtonText': "PLACEHOLDER WELSH Derbyn yr holl gwcis",#}
 {#            'secondaryButtonText': "PLACEHOLDER WELSH Gosod dewisiadau o ran cwcis",#}
 {#            'confirmationButtonText': 'PLACEHOLDER WELSH Cuddio hwn',#}
