--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -5,9 +5,7 @@
 
 {% block main %}
 
-    <h1 class="ons-u-fs-xl">
-        {{ _('We will keep your information secure and confidential') }}
-    </h1>
+    <h1 class="ons-u-fs-xl">{{ _('We will keep your information secure and confidential') }}</h1>
 
     <p>{{ _('This means that we will:') }}</p>
     {%- autoescape false -%}
