--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -103,6 +103,6 @@
             "statementTitle": 'Tell us whether you accept cookies',
             "statementText": 'We use <a href="' + domain_url_en + '/en/cookies/' + '">cookies to collect information</a> about how you use start.surveys.ons.gov.uk. We use this information to make the website work as well as possible and improve our services.',
             "confirmationText": 'You’ve accepted all cookies. You can <a href="' + domain_url_en + '/en/cookies/' + '">change your cookie preferences</a> at any time.',
-            "secondaryButtonUrl": domain_url_en + '/cookies/'
+            "secondaryButtonUrl": domain_url_en + 'en/cookies/'
         }) }}
 {%- endblock -%}
