--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -110,29 +110,14 @@
 {%- endblock -%}
 
 {%- block preHeader -%}
+    {% set cookiesPageURL = domain_url_en + '/cy/cookies/' %}
 
     {%- from 'components/cookies-banner/_macro.njk' import onsCookiesBanner -%}
-    {{
-        onsCookiesBanner({
-            'lang': 'cy'
-        })
-    }}
+    {{ onsCookiesBanner({
+        'lang': 'cy',
+        'settingsLinkURL': cookiesPageURL,
+        'statementText': '<p>Ffeiliau bach a gaiff eu storio ar eich dyfais pan fyddwch yn mynd ar wefan yw cwcis. Rydym ni’n defnyddio rhai cwcis hanfodol i wneud i’r wefan hon weithio.</p><p>Hoffem osod <a href="' + cookiesPageURL + '">cwcis ychwanegol</a> er mwyn cofio eich gosodiadau a deall sut rydych chi’n defnyddio’r wefan. Mae hyn yn ein helpu ni i wella ein gwasanaethau.</p>',
+        'preferencesText': 'Gallwch chi <a href="' + cookiesPageURL + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.'
+        }) }}
 {%- endblock -%}
 
-{#TODO: PLACEHOLDER WELSH  Old below: But we're calling design system, so should be able to read theirs. Below did little as different vars now #}
-{#{%- block preHeader -%}#}
-{##}
-{#    {%- from 'components/cookies-banner/_macro.njk' import onsCookiesBanner -%}#}
-{#    {{#}
-{#        onsCookiesBanner({#}
-{#            'statementTitle': 'PLACEHOLDER WELSH Dywedwch wrthym a ydych yn derbyn cwcis',#}
-{#            'statementText': "PLACEHOLDER WELSH Rydym ni’n defnyddio <a href='" + domain_url_en + "/cy/cookies/" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",#}
-{#            'confirmationText': 'PLACEHOLDER WELSH Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_en + '/cy/cookies/' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',#}
-{#            'secondaryButtonUrl': domain_url_en + '/cy/cookies/',#}
-{#            'primaryButtonText': "PLACEHOLDER WELSH Derbyn yr holl gwcis",#}
-{#            'secondaryButtonText': "PLACEHOLDER WELSH Gosod dewisiadau o ran cwcis",#}
-{#            'confirmationButtonText': 'PLACEHOLDER WELSH Cuddio hwn',#}
-{#            'lang': 'cy'#}
-{#        })#}
-{#    }}#}
-{#{%- endblock -%}#}
