--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -65,7 +65,7 @@
 
     {%- call onsCollapsible({
         'id': 'collapsible',
-        'title': _('Who can I contact for assistance or further information?'),
+        'title': _('Who can I contact for further information?'),
         'titleTag': 'h2',
         'button': {
             'close': _('Hide this'),
