--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -20,7 +20,7 @@
         <a class="ons-js-return-link ons-u-mt-s ons-u-dib" href="#0">{{ _('Return to previous page') }}</a>
     {% endcall %}
     <h1 class="ons-u-fs-xxl">{{ _('Cookies on start.surveys.ons.gov.uk') }}</h1>
-    <p>{{ _('Cookies are small files saved on your phone, tablet or computer when you visit a website.') }}</p>
+    <p>{{ _('Cookies are small files saved on your device when you visit a website.') }}</p>
     <p>{{ _('We use cookies to store information about how you use this service, such as the pages you visit.') }}</p>
     <h2>{{ _('Cookie settings') }}</h2>
     <div class="ons-u-db-no-js_enabled">
@@ -43,7 +43,7 @@
         <form data-module="cookie-settings">
             <h3>{{ _('Cookies that help with our communications') }}</h3>
             <p>{{ _('Some of our pages may contain content from other sites which may set their own cookies. These sites are
-                sometimes called “third party” services. This tells us how many people are seeing the content and
+                sometimes called “third party” services. This tells us how many people see the content and
                 whether it’s useful.') }}</p>
             <p>{{ _('In addition, if you share a link to a page, the service you share it on may set a cookie. We have no
                 control over cookies set on other websites – you can turn them off, but not through us.') }}</p>
@@ -70,8 +70,8 @@
                 ]
             }) }}
             <h3 class="ons-u-mt-l">{{ _('Cookies that remember your settings') }}</h3>
-            <p>{{ _('These cookies do things like remember your preferences and the choices you make, to personalise your
-                experience of using the site.') }}</p>
+            <p>{{ _('These cookies personalise your experience of using the site,
+                by doing things like remembering your preferences and the choices you make.') }}</p>
             {{ onsRadios({
                 "id": "cookies-measure-website-settings",
                 "name": "cookies-settings",
@@ -99,7 +99,7 @@
             {{ onsList({
                     "itemsList": [
                         {
-                            "text": _("remember the notifications you've seen so we do not show them to you again")
+                            "text": _("remember the notifications you've seen so we do not show you them again")
                         },
                         {
                             "text": _('remember your progress through a form (for example, online business surveys)')
