--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -115,9 +115,13 @@
     {%- from 'components/cookies-banner/_macro.njk' import onsCookiesBanner -%}
     {{ onsCookiesBanner({
         'lang': 'cy',
+        'statementTitle': _('Cookies'),
+        'serviceName': '',
         'settingsLinkURL': cookiesPageURL,
-        'statementText': '<p>Ffeiliau bach a gaiff eu storio ar eich dyfais pan fyddwch yn mynd ar wefan yw cwcis. Rydym ni’n defnyddio rhai cwcis hanfodol i wneud i’r wefan hon weithio.</p><p>Hoffem osod <a href="' + cookiesPageURL + '">cwcis ychwanegol</a> er mwyn cofio eich gosodiadau a deall sut rydych chi’n defnyddio’r wefan. Mae hyn yn ein helpu ni i wella ein gwasanaethau.</p>',
-        'preferencesText': 'Gallwch chi <a href="' + cookiesPageURL + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.'
-        }) }}
+        'statementText': _('<p>To collect information about how you use this website, we use <a href="' + cookiesPageURL + '">cookies.</a></p>
+                        <p>This information helps us improve our services and make sure that the website works as well as possible.</p>'),
+        'preferencesText': _('Gallwch chi <a href="' + cookiesPageURL + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.')
+        })
+    }}
 {%- endblock -%}
 
