Missed one change

--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -226,9 +226,8 @@
                         ]
                     }) }}
                 <h4>{{ _('Cookie message') }}</h4>
-                <p>{{ _('You may see a banner when you visit start.surveys.ons.gov.uk inviting you to accept cookies or review your
-                    settings. We’ll set cookies so that your computer knows you’ve seen it and not to show it again, and
-                    also to store your settings.') }}</p>
+                <p>{{ _('You may see a banner when you visit start.surveys.ons.gov.uk inviting you to accept cookies or review your settings.
+                    We’ll set cookies so that your computer knows you’ve seen it and not to show it again and store your settings.') }}</p>
                 {{ onsTable({
                         "ths": [
                             {
