Add link to the logo

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -92,6 +92,7 @@
     'language': language,
     'header': {
         'language': 'cy',
+        'orgLogoHref': domain_url_en + '/cy/start/',
         'title': site_name_cy
     },
     'signoutButton': signout_button_value,
