--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -87,7 +87,7 @@
 {%- set pageConfig = {
     'title': page_title_value,
     'header': {
-        'logoHref': 'https://www.ons.gov.uk/',
+        'orgLogoHref': domain_url_en + '/en/start/',
         'title': site_name_en
     },
     'signoutButton': signout_button_value,
