--- a/app/templates/start-too-many-requests.html
+++ b/app/templates/start-too-many-requests.html
@@ -7,7 +7,7 @@
 {%- if display_region == 'cy' -%}
     {%- set breadcrumb_items = [
                 {
-                    "url": domain_url_en + '/cy',
+                    "url": domain_url + '/cy',
                     "text": 'Hafan'
                 }
             ]
@@ -15,7 +15,7 @@
 {%- else -%}
     {%- set breadcrumb_items = [
                 {
-                    "url": domain_url_en,
+                    "url": domain_url + '/en',
                     "text": 'Home'
                 }
             ]
