--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -48,7 +48,7 @@
     }}
     {%- endautoescape -%}
 
-    <h2>{{ _('Who can access the information?') }}</h2>
+    <h2>{{ _('Access to information') }}</h2>
     <p>{{ _('We employ third-party providers to assist us in survey data collection. These third parties work under our instruction,
         and are strictly used as technical service providers in a capacity as a data processor.
         We retain your data and control how this is used. The third parties we work with are:') }}</p>
